--- a/app/views/organized/users/new.html.haml
+++ b/app/views/organized/users/new.html.haml
@@ -1,52 +1,54 @@
 .mb-4
   %h1
-    Invite user
+    = t(".invite_user")
   %p
-    You have invited:
-    %strong
-      = number_with_delimiter(current_organization.sent_invitation_count)
-      = "user".pluralize(current_organization.sent_invitation_count)
+    - count = number_with_delimiter(current_organization.sent_invitation_count)
+    = t(".you_have_invited_html", users_count: pluralize(count, t(".user")))
   %p
-    You can add
-    %strong
-      = number_with_delimiter current_organization.remaining_invitation_count
-      more
+    - count = number_with_delimiter(current_organization.remaining_invitation_count)
+    = t(".remaining_invites_html", invitations_count: count)
 
 = form_for @membership, { as: :membership, url: organization_users_path(organization_id: current_organization.to_param), action: 'create', html: { class: 'organized-form' } } do |f|
+
   - if @membership.errors.any?
-    = render partial: "/shared/errors", locals: { name: "Membership", obj: @membership }
+    = render partial: "shared/errors", locals: { name: t(".membership"), obj: @membership }
+
   - display_multi_invite = params[:multiple_emails_invited].present?
   .form-group.row#singleEmailInvite{ class: display_multi_invite ? "currently-hidden" : "" }
-    = f.label :invited_email, "Email you're inviting", class: "org-form-label"
+    = f.label :invited_email, t(".email_youre_inviting"), class: "org-form-label"
     .col-sm-4
       = f.email_field :invited_email, class: "form-control"
       .below-input-help
         %a#multipleUserSelect{ href: "#" }
-          Invite multiple emails
+          = t(".invite_multiple_emails")
+
   .form-group.row#multipleEmailInvite{ class: display_multi_invite ? "" : "currently-hidden" }
     = label_tag :multiple_emails_invited, class: "org-form-label" do
-      Multiple emails
+      = t(".multiple_emails")
       %br
-      %em.small
-        1 email per line
+      %em.small= t(".1_email_per_line")
+
     .col-sm-4#multipleEmailInviteField{ class: display_multi_invite ? "" : "currently-hidden" }
-      = text_area_tag :multiple_emails_invited, params[:multiple_emails_invited], placeholder: "example@example.com\nexample2@example.com\nexample3@example.com", rows: 4, class: "form-control"
+      = text_area_tag :multiple_emails_invited,
+        params[:multiple_emails_invited],
+        placeholder: t(".example_emails"),
+        rows: 4,
+        class: "form-control"
 
   .form-group.row
-    %label.org-form-label
-      Membership type
+    %label.org-form-label= t(".membership_type")
     .col-sm-4
       .radio
         %label
           = f.radio_button :role, Membership.membership_types.first
-          Admin of organization
+          = t(".admin_of_organization")
       .radio
         %label
           = f.radio_button :role, Membership.membership_types.second
-          Member of organization
+          = t(".member_of_organization")
 
   .form-group.row
     .form-submit-button
-      = f.submit 'Send invitation', class: 'btn btn-success btn-lg'
+      = f.submit t(".send_invitation"), class: 'btn btn-success btn-lg'
 
 = javascript_pack_tag "application"
